<resources>
    <string name="app_name">event_reminder</string>
    <string name="anniversary">Anniversary</string>
    <string name="birthday">Birthday</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_name">Enter Name</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="event_reminder">Event Reminder</string>
    <string name="age">Age</string>
    <string name="date">Date</string>
    <string name="textview">TextView</string>
    <string name="update">UPDATE</string>
    <string name="default_channel_id">channel</string>
    <string name="choose_date_error">Choose a date.</string>
    <string name="choose_event_type_error">Choose a event type.</string>
    <string name="name_blank_error">Event Name should not be blank.</string>
    <string name="date_in_future_error">Date can\'t be in the future.</string>
    <string name="name_unique_error">Event Name should be unique.</string>
    <string name="no_error">No error</string>
    <string name="today">Today</string>
    <string name="notification_content_text">Remember to wish people who have events today!</string>
    <string name="arg_old">%1$s old</string>
</resources>