<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="10dp"
    android:backgroundTint="?attr/colorOnPrimary"
    android:padding="15dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imv_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:elevation="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/textview"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="19sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/date"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            android:gravity="right"
            android:text="@string/age"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>