<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/dark_pink"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/edt_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/dark_pink"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_date"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_date">

        <RadioButton
            android:id="@+id/birthdayRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:buttonTint="@color/dark_pink"
            android:text="@string/birthday"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/anniversaryRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark_pink"
            android:text="@string/anniversary"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:backgroundTint="@color/dark_pink"
        android:text="Add"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_trash" />

</androidx.constraintlayout.widget.ConstraintLayout>
